[gd_scene load_steps=13 format=3 uid="uid://cy1q5p8gb1ttp"]

[ext_resource type="Script" path="res://scripts/NeutralOrbCapsule.gd" id="1_1lavi"]
[ext_resource type="Texture2D" uid="uid://ckwlwcbkffn01" path="res://assets/NeutraPod SpriteSheet.png" id="1_3jet8"]
[ext_resource type="Script" path="res://scripts/Orbs.gd" id="3_7plo4"]
[ext_resource type="PackedScene" uid="uid://djy1ltinuio1p" path="res://scenes/Orb.tscn" id="3_afj57"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dcpbr"]
atlas = ExtResource("1_3jet8")
region = Rect2(0, 0, 1638, 1735)

[sub_resource type="AtlasTexture" id="AtlasTexture_34ne5"]
atlas = ExtResource("1_3jet8")
region = Rect2(0, 0, 1638, 1735)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1nkf"]
atlas = ExtResource("1_3jet8")
region = Rect2(1638, 0, 1638, 1735)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtuac"]
atlas = ExtResource("1_3jet8")
region = Rect2(3276, 0, 1638, 1735)

[sub_resource type="AtlasTexture" id="AtlasTexture_oahue"]
atlas = ExtResource("1_3jet8")
region = Rect2(4914, 0, 1638, 1735)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvaai"]
atlas = ExtResource("1_3jet8")
region = Rect2(6552, 0, 1638, 1735)

[sub_resource type="SpriteFrames" id="SpriteFrames_3vsck"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dcpbr")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_34ne5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1nkf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtuac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oahue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvaai")
}],
"loop": false,
"name": &"open",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_1ooui"]
radius = 40.05

[node name="NeutralOrbCapsule" type="Area2D"]
collision_layer = 1048580
collision_mask = 8
script = ExtResource("1_1lavi")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_3vsck")
autoplay = "default"
offset = Vector2(2.08165e-12, -200)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1ooui")

[node name="Orbs" type="Node2D" parent="."]
z_index = -3
position = Vector2(0, -9)
script = ExtResource("3_7plo4")

[node name="Orb" parent="Orbs" instance=ExtResource("3_afj57")]

[node name="Orb2" parent="Orbs" instance=ExtResource("3_afj57")]

[node name="Orb3" parent="Orbs" instance=ExtResource("3_afj57")]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="animation_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_changed"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
